# WEB-VR-Towards-Virtual-and-Augmented-Reality-for-the-WEB-1.0

./: .eslintrc  .gitignore  README.md  bs-config.json  package.json  webpack.config.js
Code/: .gitignore  README.md
Code/webvr-scenes/: package-lock.json
Documents/: README.docx
Documents/Additional Materials/: Final Presentation.pptx  README.docx
Documents/Meeting Minutes/: Daily Scrum Meeting Minutes.docx  README.docx  Sprint Planning Meeting Minutes.docx  Sprint Retrospective Meeting Minutes.docx  Sprint Review Meeting Minutes.docx
Documents/Sprint1/: ID # 692 Connection For The Mouse.docx  ID #681 Selection Sort Algorithm Scene - Hamilton Chevez.docx  ID #687 WebVR Scene User Movement.docx  ID #691 Stack Inteface Scene - Hamilton Chevez.docx  ID #719 Level 1.docx  ID #722 Input Device Events - Mouse - Bernardo Pla.docx  ID #745 Statemachine.docx
Documents/Sprint2/: ID # 752 Video Game Controler.docx  ID #673 [Bot Design] Module collision detection.docx  ID #675 Robot Controller.docx  ID #690 Implement Queue Interface Scene.docx  (+3 more)
Posters/: Daniel-Rivero.pptx  Pachev_Joseph-Poster.pptx  bernardo-pla.pptx  hamilton_chevez_summer17.pptx
Presentation Slides/: WEBVR 1.0 - Final Presentation.pptx
Videos/: index.html
app/: app.js  component.js  index.html
webvr-codeventures/: README.md
webvr-input/: Cargo.toml  README.md
webvr-input/src/: main.rs  spat_input.rs
webvr-input/src/devices/: controller.rs  empty_device.rs  mod.rs  mouse.rs
webvr-scenes/: .eslintrc.json  gulpfile.js  package-lock.json  package.json  webpack.config.js
(+131 files in other folders)
